2002-11-06  Andrew Cagney  <ac131313@redhat.com>

	* regcache.h (deprecated_register_valid): Rename register_valid.
	* regcache.c: Update.
	* ia64-aix-nat.c: Update.
	* i386gnu-nat.c: Update.
	* alpha-nat.c: Update.
	* sparc-nat.c: Update.
	* lynx-nat.c: Update.
	* remote-mips.c: Update.

2002-11-06  Joel Brobecker  <brobecker@gnat.com>

	* hppa-tdep.c (_initialize_hppa_tdep): Move function body
	to end of file, to be more consistent with the pratice followed
	by other targets.

2002-11-06  Andrew Cagney  <ac131313@redhat.com>

	* infcmd.c: Include "reggroups.h" and <ctype.h>.
	(print_float_info): Print registers in float_reggroup.
	(print_vector_info): Print registers in vector_reggroup.
	(default_print_registers_info): When all, print registers in
	all_reggroup.  Otherwize, print registers in general_reggroup.
	(registers_info): Rewrite.  Add support for register groups.
	Eliminate a goto.

2002-11-06  Elena Zannoni  <ezannoni@redhat.com>

	* symtab.c (methods_info): Delete. It has been ifdeffed out for
	ages.
	(symtab_symbol_info): Remove eons old ifdeffed out code.
	(_initialize_symtab): Remove prehistoric disabled 'info methods'
	command.

2002-11-06  Theodore A. Roth  <troth@openavr.org>

	* c-exp.y: Add missing semi-colons.
	* f-exp.y: Add missing semi-colons.
	* m2-exp.y: Add missing semi-colons.
	* p-exp.y: Add missing semi-colons.
	Add empty action to start rule to avoid a type clash error when
	building with bison >= 1.50.

2002-11-06  Jim Blandy  <jimb@redhat.com>

	* macrotab.h (struct macro_source_file): Doc fix.

2002-11-05  Jeff Johnston  <jjohnstn@redhat.com>

	* varobj.c (child_exists, cplus_number_of_children): Change
	STREQ macro references to strcmp.
	(cplus_name_of_child): Change code to handle the fact that
	fields are not necessarily contiguous with regards to their 
	access control. This is a fix for PR gdb/792.

2002-11-05  Andrew Cagney  <ac131313@redhat.com>

	* gdbarch.sh (GET_SAVED_REGISTER): Change to a predicate function.